all folders and images added

--- a/pages/courses.html
+++ b/pages/courses.html
@@ -184,19 +184,19 @@
     </div>
 
     <div class="bottom-navigation-bar">
-        <a class="bottom-menu-item">
+        <a class="bottom-menu-item" href="./../home.html">
             <img src="./../img/home.png" class="bottom-menu-icon">
         </a>
 
-        <a class="bottom-menu-item">
+        <a class="bottom-menu-item" href="courses.html">
             <img src="./../img/courses.png" class="bottom-menu-icon">
         </a>
 
-        <a class="bottom-menu-item">
+        <a class="bottom-menu-item" href="settings.html">
             <img src="./../img/setting.png" class="bottom-menu-icon">
         </a>
 
-        <a class="bottom-menu-item">
+        <a class="bottom-menu-item" href="logout.html">
             <img src="./../img/logout.png" class="bottom-menu-icon">
         </a>
     </div>
